# WhisperShell

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tauri.conf.json  test_cursor.rs
capabilities/: default.json
copr/: whispershell.spec
docs/: README.md  colorscheme.md  important.md
docs/logger/: v1.md  v2.md
src/: lib.rs  main.rs
src/audio/: mod.rs
src/constants/: mod.rs
src/inference/: mod.rs
src/injection/: mod.rs
ui/: app.js  index.html  overlay.html  styles.css
ui/components/: ConfigToggle.js  CustomSelect.js  FilePaths.js  HistoryLimit.js  HotkeySetup.js  ModelSelection.js  OverlaySize.js
