[package]
name = "whispershell"
version = "0.1.0"
description = "WhisperShell - Local voice dictation daemon"
authors = ["WhisperShell"]
homepage = "https://whispershell.tech"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "whispershell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14"
dirs = "5.0"

# Audio capture and processing
cpal = "0.15"
rubato = "0.14"
hound = "3.5"

# AI inference engine (Vulkan GPU backend)
whisper-rs = { version = "0.16", features = ["vulkan"] }

# Clipboard write
arboard = "3"
mouse_position = "0.1.4"

# Networking & Async
reqwest = { version = "0.11", features = ["stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
